--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
   <div class="jumbotron">
-    <p>Im in home.....</p>{{message}}
+    <p>Now you are in Home and Love you {{message}}</p>
   </div>
   <button class="btn btn-primary" (click)="LogOut()">LogOut</button>
 </div>
